deploy/k8s/yaml/orderprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderprocessor
  labels:
    app: orderprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderprocessor
  template:
    metadata:
      labels:
        app: orderprocessor
    spec:
      containers:
      - name: orderprocessor
        image: eshopacrnils.azurecr.io/eshop/orderprocessor:main
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
