deploy/k8s/yaml/paymentprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentprocessor
  labels:
    app: paymentprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentprocessor
  template:
    metadata:
      labels:
        app: paymentprocessor
    spec:
      containers:
      - name: paymentprocessor
        image: eshopacrnils.azurecr.io/eshop/paymentprocessor:main
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
