deploy/k8s/yaml/catalogapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogapi
  labels:
    app: catalogapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogapi
  template:
    metadata:
      labels:
        app: catalogapi
    spec:
      containers:
      - name: catalogapi
        image: eshopacrnils.azurecr.io/eshop/catalog.api:main
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
spec:
  selector:
    app: catalogapi
  ports:
    - port: 80
      targetPort: 8080
  # type: LoadBalancer
