deploy/k8s/yaml/identityapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityapi
  labels:
    app: identityapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityapi
  template:
    metadata:
      labels:
        app: identityapi
    spec:
      containers:
      - name: identityapi
        image: eshopacrnils.azurecr.io/eshop/identity.api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /app/config
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
      volumes:
        - name: config-volume
          configMap:
            name: configmap-identityapi
---
apiVersion: v1
kind: Service
metadata:
  name: identityapi
spec:
  selector:
    app: identityapi
  ports:
    - port: 80
      targetPort: 8080
  #type: LoadBalancer
