deploy/k8s/yaml/orderingapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderingapi
  labels:
    app: orderingapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderingapi
  template:
    metadata:
      labels:
        app: orderingapi
    spec:
      containers:
      - name: orderingapi
        image: eshopacrnils.azurecr.io/eshop/ordering.api:main
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ordering-api
spec:
  selector:
    app: orderingapi
  ports:
    - port: 80
      targetPort: 8080
  #type: LoadBalancer
