deploy/k8s/yaml/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
  - port: 5672
    name: rabbitmq
  clusterIP: None
  selector:
    app: rabbitmq

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  replicas: 1
  serviceName: rabbitmq
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 25672  # AMQP port
            - containerPort: 5672   # RabbitMQ port
            - containerPort: 4369   # Erlang distribution port
            - containerPort: 15672  # RabbitMQ management interface port
