deploy/k8s/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:  
  #ingressClassName: dev.myeshopdemo.com
  tls:
    - hosts:
      - dev.myeshopdemo.com
      secretName: letsencrypt-secret
  rules:
  - host: "dev.myeshopdemo.com"
    http:
      paths:
      # - path: /webapp/*
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: webapp-service
      #       port:
      #         number: 80
      - path: /catalog-api
        pathType: Exact
        backend:
          service:
            name: catalog-api
            port:
              number: 80
      - path: /identityapi/*
        pathType: Prefix
        backend:
          service:
            name: identityapi
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: webapp-service
            port:
              number: 80
